--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
    },
    "scripts": {
       "start": "node .",
-      "start-prod": "node . --production",
+      "start-prod": "node . --env=production",
       "skipdb": "node . --skipDB",
       "testvc": "node . --testvc",
       "prebuild": "npm run clean",
@@ -40,42 +40,40 @@
       "lint": "eslint . --ext .ts"
    },
    "dependencies": {
-      "@discordjs/opus": "^0.6.0",
-      "axios": "^0.24.0",
-      "bufferutil": "^4.0.5",
+      "@discordjs/opus": "^0.5.3",
+      "bufferutil": "^4.0.3",
       "chalk": "^4.1.2",
       "discord-ytdl-core": "^5.0.4",
-      "discord.js": "^12.5.3",
-      "dotenv": "^10.0.0",
+      "discord.js": "^13.0.0",
       "minimist": "^1.2.5",
-      "moment": "^2.29.1",
-      "mongoose": "^6.0.12",
+      "mongoose": "^5.13.5",
       "ms": "^2.1.3",
       "sodium": "^3.0.2",
       "spotify-uri": "^2.2.0",
       "spotify-url-info": "^2.2.3",
       "string-progressbar": "^1.0.4",
-      "tslib": "^2.3.1",
-      "utf-8-validate": "^5.0.7",
+      "tslib": "^2.3.0",
+      "utf-8-validate": "^5.0.5",
       "winston": "^3.3.3",
-      "ws": "^8.2.3",
-      "yt-search": "^2.10.2",
+      "ws": "^8.0.0",
+      "youtube-sr": "^4.1.7",
       "ytdl-core": "^4.9.1",
       "ytpl": "^2.2.3"
    },
    "devDependencies": {
       "@types/ms": "^0.7.31",
-      "@types/node": "^16.11.6",
-      "@typescript-eslint/eslint-plugin": "^5.2.0",
-      "@typescript-eslint/parser": "^5.2.0",
-      "eslint": "^8.1.0",
-      "eslint-config-alloy": "^4.4.0",
+      "@types/node": "^16.4.13",
+      "@typescript-eslint/eslint-plugin": "^4.29.0",
+      "@typescript-eslint/parser": "^4.29.0",
+      "eslint": "^7.32.0",
+      "eslint-config-alloy": "^4.2.0",
       "eslint-config-prettier": "^8.3.0",
-      "eslint-plugin-import": "^2.25.2",
-      "eslint-plugin-prettier": "^4.0.0",
-      "prettier": "^2.4.1",
+      "eslint-plugin-import": "^2.23.4",
+      "eslint-plugin-prettier": "^3.4.0",
+      "eslint-plugin-unused-imports": "^1.1.2",
+      "prettier": "^2.3.2",
       "rimraf": "^3.0.2",
-      "typescript": "^4.4.4"
+      "typescript": "^4.3.5"
    },
    "nodemonConfig": {
       "events": {
