--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
    },
    "dependencies": {
       "@discordjs/opus": "^0.6.0",
+      "axios": "^0.21.4",
       "bufferutil": "^4.0.3",
       "chalk": "^4.1.2",
-      "discord-banner": "^1.6.7",
       "discord-paginationembed": "^2.1.0",
       "discord-ytdl-core": "^5.0.4",
       "discord.js": "^12.5.3",
       "minimist": "^1.2.5",
-      "mongoose": "^6.0.6",
+      "mongoose": "^6.0.7",
       "ms": "^2.1.3",
       "sodium": "^3.0.2",
       "spotify-uri": "^2.2.0",
@@ -65,8 +65,8 @@
    "devDependencies": {
       "@types/ms": "^0.7.31",
       "@types/node": "^16.9.4",
-      "@typescript-eslint/eslint-plugin": "^4.31.1",
-      "@typescript-eslint/parser": "^4.31.1",
+      "@typescript-eslint/eslint-plugin": "^4.31.2",
+      "@typescript-eslint/parser": "^4.31.2",
       "eslint": "^7.32.0",
       "eslint-config-alloy": "^4.3.0",
       "eslint-config-prettier": "^8.3.0",
