--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
       "utf-8-validate": "^5.0.7",
       "winston": "^3.3.3",
       "ws": "^8.2.3",
-      "youtube-sr": "^4.1.8",
+      "yt-search": "^2.10.2",
       "ytdl-core": "^4.9.1",
       "ytpl": "^2.2.3"
    },
