--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "discord.js": "^12.5.3",
       "dotenv": "^10.0.0",
       "minimist": "^1.2.5",
+      "moment": "^2.29.1",
       "mongoose": "^6.0.12",
       "ms": "^2.1.3",
       "sodium": "^3.0.2",
