--- a/package.json
+++ b/package.json
@@ -41,41 +41,43 @@
    },
    "dependencies": {
       "@discordjs/opus": "^0.6.0",
-      "@discordjs/voice": "^0.6.0",
-      "bufferutil": "^4.0.3",
+      "@discordjs/voice": "^0.7.2",
+      "bufferutil": "^4.0.5",
       "chalk": "^4.1.2",
       "discord-ytdl-core": "^5.0.4",
-      "discord.js": "^13.1.0",
+      "discord.js": "^13.3.1",
       "libsodium-wrappers": "^0.7.9",
       "minimist": "^1.2.5",
-      "mongoose": "^6.0.7",
+      "mongoose": "^6.0.12",
+      "axios": "^0.24.0",
+      "dotenv": "^10.0.0",
+      "moment": "^2.29.1",
       "ms": "^2.1.3",
       "sodium": "^3.0.2",
       "spotify-uri": "^2.2.0",
       "spotify-url-info": "^2.2.3",
       "string-progressbar": "^1.0.4",
       "tslib": "^2.3.1",
-      "utf-8-validate": "^5.0.5",
+      "utf-8-validate": "^5.0.7",
       "winston": "^3.3.3",
-      "ws": "^8.2.2",
-      "youtube-sr": "^4.1.7",
+      "ws": "^8.2.3",
+      "yt-search": "^2.10.2",
       "ytdl-core": "^4.9.1",
       "ytpl": "^2.2.3"
    },
    "devDependencies": {
       "@types/ms": "^0.7.31",
-      "@types/node": "^16.9.6",
-      "@typescript-eslint/eslint-plugin": "^4.31.2",
-      "@typescript-eslint/parser": "^4.31.2",
-      "eslint": "^7.32.0",
-      "eslint-config-alloy": "^4.3.0",
+      "@types/node": "^16.11.6",
+      "@typescript-eslint/eslint-plugin": "^5.3.0",
+      "@typescript-eslint/parser": "^5.3.0",
+      "eslint": "^8.2.0",
+      "eslint-config-alloy": "^4.4.0",
       "eslint-config-prettier": "^8.3.0",
-      "eslint-plugin-import": "^2.24.2",
+      "eslint-plugin-import": "^2.25.2",
       "eslint-plugin-prettier": "^4.0.0",
-      "eslint-plugin-unused-imports": "^1.1.4",
       "prettier": "^2.4.1",
       "rimraf": "^3.0.2",
-      "typescript": "^4.4.3"
+      "typescript": "^4.4.4"
    },
    "nodemonConfig": {
       "events": {
