--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
    },
    "scripts": {
       "start": "node .",
-      "start-prod": "node . --env=production",
+      "start-prod": "node . --production",
       "skipdb": "node . --skipDB",
       "testvc": "node . --testvc",
       "prebuild": "npm run clean",
