--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "chalk": "^4.1.2",
       "discord.js": "^13.3.1",
       "dotenv": "^10.0.0",
+      "ffmpeg-static": "^4.4.0",
       "minimist": "^1.2.5",
       "moment": "^2.29.1",
       "mongoose": "^6.0.12",
