--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ OWNER_SERVER_ID=
 
 # The bots discord id, this is helpful when u have 2 instances of the bot and only want one instance to do certain things such as set roles
 BOT_ID=
+
+ELASTIC_SERVER=
+ELASTIC_USERNAME=
+ELASTIC_PASSWORD=
