--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
       "voiceReport": "node scripts/dependancyReport.js"
    },
    "dependencies": {
+      "@discordjs/builders": "^0.8.2",
       "@discordjs/opus": "^0.7.0",
+      "@discordjs/rest": "^0.1.0-canary.0",
       "@discordjs/voice": "^0.7.5",
       "agenda": "^4.2.1",
       "bufferutil": "^4.0.5",
+      "discord-api-types": "^0.24.0",
       "discord.js": "^13.3.1",
       "dotenv": "^10.0.0",
       "ffmpeg-static": "^4.4.0",
