--- a/package.json
+++ b/package.json
@@ -42,23 +42,24 @@
    },
    "dependencies": {
       "@discordjs/opus": "^0.7.0",
-      "@discordjs/voice": "^0.8.0",
+      "@discordjs/voice": "^0.9.0",
       "agenda": "^4.2.1",
       "bufferutil": "^4.0.6",
       "discord.js": "^13.6.0",
       "dotenv": "^16.0.0",
       "ffmpeg-static": "^5.0.0",
+      "isomorphic-unfetch": "^3.1.0",
       "minimist": "^1.2.6",
-      "moment": "^2.29.1",
-      "mongoose": "^6.2.8",
+      "moment": "^2.29.3",
+      "mongoose": "^6.3.1",
       "ms": "^2.1.3",
       "sodium": "^3.0.2",
-      "spotify-uri": "^2.2.0",
-      "spotify-url-info": "^3.0.0",
+      "spotify-uri": "^3.0.2",
+      "spotify-url-info": "^3.1.0",
       "string-progressbar": "^1.0.4",
-      "tslib": "^2.3.1",
+      "tslib": "^2.4.0",
       "utf-8-validate": "^5.0.9",
-      "winston": "^3.6.0",
+      "winston": "^3.7.2",
       "winston-elasticsearch": "^0.16.1",
       "ws": "^8.5.0",
       "yt-search": "^2.10.3",
@@ -67,17 +68,17 @@
    },
    "devDependencies": {
       "@types/ms": "^0.7.31",
-      "@types/node": "^17.0.22",
-      "@typescript-eslint/eslint-plugin": "^5.16.0",
-      "@typescript-eslint/parser": "^5.16.0",
-      "eslint": "^8.11.0",
+      "@types/node": "^17.0.29",
+      "@typescript-eslint/eslint-plugin": "^5.21.0",
+      "@typescript-eslint/parser": "^5.21.0",
+      "eslint": "^8.14.0",
       "eslint-config-alloy": "^4.5.1",
       "eslint-config-prettier": "^8.5.0",
-      "eslint-plugin-import": "^2.25.4",
+      "eslint-plugin-import": "^2.26.0",
       "eslint-plugin-prettier": "^4.0.0",
-      "prettier": "^2.6.0",
+      "prettier": "^2.6.2",
       "rimraf": "^3.0.2",
-      "typescript": "^4.6.2"
+      "typescript": "^4.6.3"
    },
    "nodemonConfig": {
       "events": {
